# llm-control

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ci.yml
.opencode/plans/: project.md  solid-refactor.md
src/llm_control/: __init__.py  main.py
src/llm_control/cli/: __init__.py  factories.py  state.py  views.py
src/llm_control/models/: __init__.py  backend_status.py  connection.py  model_info.py  resource.py
src/llm_control/services/: interface.py
src/llm_control/services/lmstudio/: __init__.py  client.py  monitor.py
src/llm_control/services/swarmui/: __init__.py  client.py  monitor.py
src/llm_control/utils/: config.py  formatter.py
tests/: __init__.py  conftest.py  test_formatter.py
tests/cli/: __init__.py  test_factories.py  test_main.py  test_state.py  test_views.py
tests/models/: __init__.py  test_backend_status.py  test_connection.py  test_model_info.py  test_resource.py
tests/services/: test_interface.py
tests/services/lmstudio/: __init__.py  test_client.py  test_manager.py  test_monitor.py
tests/services/swarmui/: __init__.py  test_client.py  test_manager.py  test_monitor.py
tests/utils/: __init__.py  test_config.py
